--- a/wch-ch32v003/pio-arduino-ch32v003/platformio.ini
+++ b/wch-ch32v003/pio-arduino-ch32v003/platformio.ini
@@ -17,3 +17,6 @@ build_flags = -lgcc -lm
 
 [env:genericCH32V003J4M6]
 board = genericCH32V003J4M6
+build_flags = 
+	-DCH32V003=1
+	-DADC_CYCLES_SEL=7 ; 7: 241 cycles, 6: 73 cycles
