FAST_SWITCHOFF, ops order in charlieplexing
it is important in which order the operations are performed

FAST_SWITCHOFF (enabled) just writes zeroes to ports C and D, makes them
inputs

switchOn first fast-switchoffs, then sets output values and then sets up
pin directions. This minimizes parasitic leaks, although they are still
slightly visible.

--- a/wch-ch32v003/pio-arduino-ch32v003/platformio.ini
+++ b/wch-ch32v003/pio-arduino-ch32v003/platformio.ini
@@ -20,3 +20,4 @@ board = genericCH32V003J4M6
 build_flags = 
 	-DCH32V003=1
 	-DADC_CYCLES_SEL=7 ; 7: 241 cycles, 6: 73 cycles
+        -DFAST_SWITCHOFF   ; fast switch off ports C and D
